<resources>
    <string name="app_name">AniLiberty</string>

    <string name="fragment_title_releases">Релизы</string>
    <string name="fragment_title_other">Прочее</string>
    <string name="fragment_title_release">Релиз</string>
    <string name="fragment_title_favorites">Избранное</string>
    <string name="fragment_title_youtube">YouTube</string>
    <string name="fragment_title_search">Поиск</string>
    <string name="collections">Коллекции</string>
    <string name="fragment_title_schedule">Расписание</string>

    <string name="download_torrent">Скачать торрент</string>
    <string name="watch_web">Веб-плеер</string>
    <string name="item_donate">Понравилась озвучка?\nПоддержи АниЛибрию ❤️</string>
    <string name="updater_download">Загрузить</string>
    <string name="auth_sign_with">Войти через</string>
    <string name="or">или</string>
    <string name="auth_login">Логин или email</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_2fa">Секретный код 2FA</string>
    <string name="auth_signin">Войти</string>
    <string name="auth_skip">Пропустить</string>
    <string name="comments_header">Комментарии</string>
    <string name="comments_notify_text">Нажмите или сделайте свайп направо чтобы открыть комментарии</string>
    <string name="loading">Загрузка</string>
    <string name="item_loading_error">Произошла ошибка</string>

    <string name="placeholder_title_nodata_base">Нет данных</string>
    <string name="placeholder_title_errordata_base">Ошибка при загрузке данных</string>
    <string name="placeholder_desc_nodata_base">Потяните вниз, чтобы обновить данные.</string>
    <string name="placeholder_desc_nodata_search">Сформируйте поисковой запрос иначе или потяните вниз, чтобы обновить данные.</string>
    <string name="placeholder_desc_nodata_favorites">Здесь будут отображаться ваши избранные релизы.</string>
    <string name="placeholder_desc_nodata_history">Здесь будет отображаться локальная история просмотра релизов.</string>

    <string name="country_blocked_title">This application is not available in your country</string>
    <string name="country_blocked_exit">Close app</string>

    <string name="pref_title_theme_mode">Тема приложения</string>
    <string name="pref_value_theme_mode_light">Светлая</string>
    <string name="pref_value_theme_mode_dark">Темная</string>
    <string name="pref_value_theme_mode_system">Системная</string>
    <string name="pref_transport">Сетевой движок плеера</string>
    <string name="pref_quality">Качество видео</string>
</resources>
