<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipToPadding="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/auth_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_anilibria"
            app:tint="@color/alib_red" />

        <TextView
            android:id="@+id/authSocialTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/auth_sign_with"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/authSocialContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/authSocialList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_social_auth" />

        </FrameLayout>

        <TextView
            android:id="@+id/authSocialBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/or"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/authLogin"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:freezesText="true"
                android:hint="@string/auth_login"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:scrollHorizontally="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:passwordToggleDrawable="@drawable/ic_eye"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/authPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:freezesText="true"
                android:hint="@string/auth_password"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textPassword"
                android:maxLines="1"
                android:scrollHorizontally="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <ViewSwitcher
            android:id="@+id/authSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/authSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/auth_signin" />

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center" />
        </ViewSwitcher>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/authRegistration"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="Регистрация"
                app:strokeColor="?btn_border" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/authSkip"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:text="@string/auth_skip"
                app:strokeColor="?btn_border" />
        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
