<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference android:layout="@layout/preference_shadow_top" />
    <PreferenceCategory
        android:layout="@layout/preference_category_custom"
        android:title="Уведомления">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="notifications.all"
            android:layout="@layout/preference_custom"
            android:summary="Уведомления о новых сериях и YouTube роликах"
            android:title="Общие"
            app:icon="@drawable/ic_baseline_notifications_24" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="notifications.service"
            android:layout="@layout/preference_custom"
            android:summary="Важные уведомления о проекте, об обновлении приложения и т.д. \nОтключать не рекомендуется"
            android:title="Сервисные"
            app:icon="@drawable/ic_baseline_notification_important_24" />

    </PreferenceCategory>

    <Preference android:layout="@layout/preference_shadow_double" />
    <PreferenceCategory
        android:layout="@layout/preference_category_custom"
        android:title="Общие">

        <Preference
            android:key="app_theme"
            android:layout="@layout/preference_custom"
            android:title="@string/pref_title_theme_mode"
            app:icon="@drawable/ic_baseline_style_24" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="episodes_is_reverse"
            android:layout="@layout/preference_custom"
            android:summary="Порядок серий при просмотре страницы релиза"
            android:title="Обратный порядок серий"
            app:icon="@drawable/ic_baseline_sort_24" />

    </PreferenceCategory>

    <Preference android:layout="@layout/preference_shadow_double" />
    <PreferenceCategory
        android:layout="@layout/preference_category_custom"
        android:title="Плеер">

        <Preference
            android:key="player_quality"
            android:layout="@layout/preference_custom"
            android:title="@string/pref_quality" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="player_skips"
            android:layout="@layout/preference_custom"
            android:summary="Показывать кнопки пропуска опенинга и эндинга"
            android:title="Кнопки пропуска"
            app:icon="@drawable/ic_skip_forward" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="player_skips_timer"
            android:layout="@layout/preference_custom"
            android:summary="Автоматически пропускать опенинг и эндинг по таймеру"
            android:title="Пропуск опенинга по таймеру"
            app:icon="@drawable/ic_av_timer" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="player_inactive_timer"
            android:layout="@layout/preference_custom"
            android:summary="Экран заблокируется, если бездействовать более 1ч"
            android:title="Таймер на бездействие"
            app:icon="@drawable/ic_timer_outline" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="player_auto_play"
            android:layout="@layout/preference_custom"
            android:summary="Автоматически воспроизводить следующий эпизод"
            android:title="Автовоспроизведение"
            app:icon="@drawable/ic_play_circle_outline" />

        <Preference
            android:key="player_transport"
            android:layout="@layout/preference_custom"
            android:title="@string/pref_transport"
            app:icon="@drawable/ic_baseline_cable_24" />

    </PreferenceCategory>

    <Preference android:layout="@layout/preference_shadow_double" />
    <PreferenceCategory
        android:layout="@layout/preference_category_custom"
        android:title="О программе">

        <Preference
            android:key="about.application"
            android:layout="@layout/preference_custom"
            android:title="@string/app_name"
            app:icon="@drawable/ic_info_outline" />

        <Preference
            android:key="about.check_update"
            android:layout="@layout/preference_custom"
            android:title="Проверить обновления"
            app:icon="@drawable/ic_baseline_get_app_24" />

    </PreferenceCategory>
    <Preference android:layout="@layout/preference_shadow_bottom" />
</PreferenceScreen>